# knowledge-indexer

./: .env.example  .gitignore  README.md  pyproject.toml
app/: main.py
app/api/: health.py  internal_ask.py  internal_search.py  jobs.py  responses.py  sources.py
app/connectors/: base.py  custom_api_connector.py  file_connector.py  postgres_connector.py
app/core/: config.py  container.py  database.py  health.py  logger.py  minio.py  redis.py  security.py  utils.py
app/flows/: api_index_flow.py  file_index_flow.py  postgres_index_flow.py
app/models/: checkpoint.py  chunk.py  common.py  document.py  job.py  source.py
app/repositories/: checkpoint_repo.py  chunk_repo.py  document_repo.py  job_repo.py  source_repo.py
app/schemas/: common.py  document.py  job.py  retrieval.py  source.py
app/services/: answer_generator.py  document_processor.py  embedding_service.py  indexing_service.py  job_runner.py  job_service.py  pipeline_engine_service.py  qa_service.py  rerank_service.py  source_service.py  (+3 more)
docker/: Dockerfile  docker-compose.yml
docs/: usage.md  use-cases.md
migrations/: 001_init_postgres.sql  README.md
scripts/: rebuild_index.py  run_full_sync.py  run_incremental_sync.py
tests/: test_document_processor.py  test_health.py  test_health_api.py  test_indexing_service.py  test_internal_jobs_api.py  test_internal_qa_api.py  test_job_service.py  test_postgres_connector.py  test_postgres_repositories.py  test_qa_service.py  test_rerank_service.py  test_retrieval_service.py  test_shared_capabilities.py  test_sync_orchestrator.py  test_t7_regression.py
(+25 files in other folders)
