[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "knowledge-indexer"
version = "0.1.0"
description = "Internal knowledge indexing and retrieval service scaffold built with FastAPI."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn[standard]>=0.30,<1.0",
  "pydantic>=2.8,<3.0",
  "pydantic-settings>=2.4,<3.0",
  "httpx>=0.27,<1.0",
  "tenacity>=9.0,<10.0",
]

[project.optional-dependencies]
infra = [
  "sqlalchemy>=2.0,<3.0",
  "psycopg[binary]>=3.1,<4.0",
  "redis>=5.0,<6.0",
  "minio>=7.2,<8.0",
  "alembic>=1.13,<2.0",
  "cocoindex>=0.1.36",
]
dev = [
  "pytest>=8.3,<9.0",
  "pytest-asyncio>=0.24,<1.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
